--- a/index.html
+++ b/index.html
@@ -7,39 +7,41 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"> 
-  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet"> 
+   <link rel="stylesheet" href="./normalize.css">
+  <link rel="stylesheet" href="./style.css">
   <title>Frontend Mentor | Stats preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 
 </head>
 <body>
-<div class="container">
-<div class="box">
+  <div class="container">
+    <div class="box">
+  
+      
+        <div class="img">
+          <div class="overlay"></div>
+        </div>
+        <h2>Get <span>insights</span> that help your business grow.</h2>
+        <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+          experience, and overall efficiency.</p>
+          <section>
+            <strong>10k+</strong>
+            <p>companies</p>
+            <strong>314</strong>
+            <p>templates</p>
+            <strong>12m+</strong>
+            <p>queries</p>
+          </section>
 
-<div class="header-img">
-  <img src="./images/image-header-mobile.jpg" alt="a women in meeting with devices infront of them">
+
+  
 
 </div>
-
-<div class="main-info">
-  <h3>Get insights that help your business grow.</h3>
-  <p>
-    Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-    experience, and overall efficiency.</p>
-    <section>
-      <strong>10k+</strong>
-      <p>companies</p>
-      <strong>314</strong>
-      <p>templates</p>
-      <strong>12m+</strong>
-      <p>queries</p>
-    </section>
 </div>
-
-</div>
-</div>
-
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
