--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class="img">
           <div class="overlay"></div>
         </div>
+        <div class="content">
         <h2>Get <span>insights</span> that help your business grow.</h2>
         <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
           experience, and overall efficiency.</p>
@@ -36,6 +37,7 @@
             <strong>12m+</strong>
             <p>queries</p>
           </section>
+        </div>
 
 
   
